# xdpss

./: README.md  pyproject.toml
example/: stream-pw-node.sh  wemeet_with_screencast.sh  xdpss-mirror.sh  xwayland-rootful-openbox.sh
src/xdpss/: __init__.py
