[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xpdss"
version = "0.1.0"
authors = [
    {name = "Junxuan Liao", email = "mikeljx@126.com"},
]
description = "Initiate screencast with the help of XDG Desktop portals."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "dbus-python >= 1.0",
    "PyGObject >= 3.46.0"
]
license = { text = "GPL-3.0-only" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.scripts]
xdpss = "xdpss:main"
